--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 /* color scheme sourced from http://khroma.co/generator/ */
 :root {
-  --outer-space: #33393f;
+  --outer-space: #000000;
   --ice-blue: #2a7cef;
   --gin: #e0eae4;
   --matrix-green: #0fb425;
